--- a/index.html
+++ b/index.html
@@ -54,20 +54,8 @@
     <img src="paypal.gif" width="70">
     <img src="msie.gif" width="70">
   </footer>
-
-  <a href="DISCOVERY.html" class="mission">?</a>
-  <script type="text/javascript">
-    //<![CDATA[
-    var MobileKeyWords = ["iPhone","iPod","iPad","Android","Windows CE","Symbian","BlackBerry","Mobile","Phone","UP.Browser","webOS","SonyEricsson","Windows Phone","LG","MOT","SAMSUNG"];
-    var mobile='N';
-    var userAgent = navigator.userAgent.toLowerCase();
-    for(i=0;i<MobileKeyWords.length;i++){eval("if(userAgent.match(/"+MobileKeyWords[i].toLowerCase()+"/i)){mobile='Y';}"); if(mobile=="Y"){break;}}
-    if(mobile=="Y")
-    {
-      if(confirm("모바일웹사이트로 이동하시겠습니까?")){location="mindex.html";}
-    }
-    //]]>
-  </script>
-
+  <div>
+    <a href="DISCOVERY.html" class="mission">?</a>
+  </div>
   </body>
 </html>
