--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <img src="paypal.gif" width="70">
     <img src="msie.gif" width="70">
   </footer>
-  <div>
+  <div class="fill">
     <a href="DISCOVERY.html" class="mission">?</a>
   </div>
   </body>
