--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <p>Payment : You can use almost all credit card (Visa,Master card,American Express etc.) or use Paypal and there can be additional tax if concerned.<br> Shippping : Products will be sent from Korea using the ePOST service. You can choose two shipping options - Parcel, and EMS. <br>To get the package safely and promptly, please write your whole shippng address in english!<br>
     If you have any questions, contact us via email or instagram.<br>
     </p>
-    <p class="korean">한국 거주 중인 경우 계좌이체 방식을 통한 구매가 가능합니다. 계좌이체 구매를 원하시는 경우 이메일이나 인스타그램 계정을 통해 연락 주시기 바랍니다.</p>
+    <!-- <p class="korean">한국 거주 중인 경우 계좌이체 방식을 통한 구매가 가능합니다. 계좌이체 구매를 원하시는 경우 이메일이나 인스타그램 계정을 통해 연락 주시기 바랍니다.</p> -->
   </main>
 
   <footer style="text-align: center;">
