--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
   <main>
     <h4>Welcome to baeksamsibo(135) homepage!</h4>
     <p>Baeksamsibo, which means one hundred thirty five in korean is the brand that makes playing card artworks and clothes.<br>
-    You can check our products, reference video and more in this web site.
-    <h4>About payment & shipping...</h4>
+    You can check our products, reference video and more in this web site.<br><br>
+    CHAWON Playing cards preorder will start soon....<br>Follow 135 instagram account(@baeksamsibo) for more info!
+    <!-- <h4>About payment & shipping...</h4>
     <p>Payment : You can use almost all credit card (Visa,Master card,American Express etc.) or use Paypal and there can be additional tax if concerned.<br> Shippping : Products will be sent from Korea using the ePOST service. You can choose two shipping options - Parcel, and EMS. <br>To get the package safely and promptly, please write your whole shippng address in english!<br>
     If you have any questions, contact us via email or instagram.<br>
-    </p>
+    </p> -->
     <!-- <p class="korean">한국 거주 중인 경우 계좌이체 방식을 통한 구매가 가능합니다. 계좌이체 구매를 원하시는 경우 이메일이나 인스타그램 계정을 통해 연락 주시기 바랍니다.</p> -->
   </main>
 
