--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <!-- 카트 -->
     <div class="cart">
       <button onclick="location.href='cart.html'">CART</button>
-      </div>
+    </div>
 
   <header>
     <div class="logo">
-      <img src="ohtf.png" width="25%" title="number:3618" onclick="location.href= 'index.html'"></img>
+      <img src="ohtf.png" width="25%" title="3618" onclick="location.href= 'index.html'"></img>
     </div>
     
     <div class="welcome">
@@ -53,10 +53,12 @@
   <footer style="text-align: center;">
     <p class="copyright">135 © 2024</p>
     <img src="paypal.gif" width="70">
-    <img src="msie.gif" width="70">
-  </footer>
-  <div class="fill">
-    <a href="DISCOVERY.html" class="mission">?</a>
+    <img src="msie.gif" width="70"><br>
+  <div class="tos">
+    <a href="https://baeksamsibo.myshopify.com/policies/terms-of-service" >Terms of service</a>
+    <a href="https://baeksamsibo.myshopify.com/policies/refund-policy" >Refund policy</a>
   </div>
+  </footer>
+    <a href="DISCOVERY.html" class="mission">?</a>
   </body>
 </html>
