--- a/handc.html
+++ b/handc.html
@@ -19,7 +19,7 @@
 
       <header>
       <div class="logo">
-        <img src="ohtf.png" width="25%" title="number:3618" onclick="location.href= 'index.html'"></img>
+        <img src="ohtf.png" width="25%" onclick="location.href= 'index.html'"></img>
       </div>
   
     <div class="bar">
@@ -51,6 +51,10 @@
         <p class="copyright">135 © 2024</p>
         <img src="paypal.gif" width="70">
         <img src="msie.gif" width="70">
+        <div class="tos">
+          <a href="https://baeksamsibo.myshopify.com/policies/terms-of-service" >Terms of service</a>
+          <a href="https://baeksamsibo.myshopify.com/policies/refund-policy" >Refund policy</a>
+        </div>
       </footer>
     </body>
 </html>
