--- a/reference.html
+++ b/reference.html
@@ -6,9 +6,15 @@
     <link href="design.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://unpkg.com/98.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
-    <link rel="icon" href="135.ico">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+  <link rel="icon" href="135.ico">
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-storage.js"></script>
   </head>
 
   <body>
@@ -20,7 +26,7 @@
       <header>
       <!--로고-->
       <div class="logo">
-        <img src="ohtf.png" width="25%" title="number:3618" onclick="location.href= 'index.html'"></img>
+        <img src="ohtf.png" width="25%" onclick="location.href= 'index.html'"></img>
       </div>
       <!--메뉴-->
     <div class="bar">
@@ -34,21 +40,38 @@
   </header>
     <!--참고자료 영상-->
     <section>
-    <div class="reference">
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/-CWk05WqX6M?si=JpNk86EERcxkjJ0K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br>
+      <div class="reference"></div>
+    </section>
+    <script>
+      const firebaseConfig = {
+      apiKey: "AIzaSyCMyyLgZcSYkU3oUBj-MKQO1-geOVKD968",
+      authDomain: "ohtf-a5c05.firebaseapp.com",
+      projectId: "ohtf-a5c05",
+      storageBucket: "ohtf-a5c05.appspot.com",
+      messagingSenderId: "263671345747",
+      appId: "1:263671345747:web:ca5857fe5827f4890a8ca6"
+    };
 
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7Z_46F0utXg?si=wMpqsJM4pfdcMQuE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br>
+    // Initialize Firebase
+    const app = firebase.initializeApp(firebaseConfig);
 
-    </div>
-  
-  </section>
-  
-
-
+    const db = firebase.firestore();
+    db.collection('reference').get().then((result)=>{
+      result.forEach((doc) => {
+        console.log(doc.data());
+        var video_link = `${doc.data().link}`;
+        $(".reference").append(video_link);
+      });
+    });
+    </script>
       <footer>
         <p class="copyright">135 © 2024</p>
         <img src="paypal.gif" width="70">
         <img src="msie.gif" width="70">
+        <div class="tos">
+          <a href="https://baeksamsibo.myshopify.com/policies/terms-of-service" >Terms of service</a>
+          <a href="https://baeksamsibo.myshopify.com/policies/refund-policy" >Refund policy</a>
+        </div>
       </footer>
 
   </body>
