--- a/products.html
+++ b/products.html
@@ -61,7 +61,7 @@
       result.forEach((doc) => {
         const container = $('.container');
         var temp = `
-        <form method="post">
+        <form>
           <div class="products">
             <img class="thumnail" src='${doc.data().thumnail}'></img>
             <input type="text" name="prid" value="${doc.data().prnum}" style="display: none;">
