--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <h4>Welcome to baeksamsibo(135) homepage!</h4>
     <p>Baeksamsibo, which means one hundred thirty five in korean is the brand that makes playing card artworks and clothes.<br>
     You can check our products, reference video and more in this web site.<br><br>
-    CHAWON Playing cards preorder will start soon....<br>Follow 135 instagram account(@baeksamsibo) for more info!
+    Now CHAWON Playing cards preorder is open until 2024/05/26!<br><br>Follow 135 instagram account(@baeksamsibo) for more info...
     <h4>About payment & shipping...</h4>
     <p>Payment : To buy a product, You should have your own Paypal account! and there can be additional tax if concerned.<br> Shippping : Products will be sent from Korea using the ePOST (k-packet) service. <br>To get the package safely and promptly, please write your whole shippng address in english!<br>
     If you have any questions, contact us via email or instagram.<br>
