--- a/handc.html
+++ b/handc.html
@@ -36,6 +36,7 @@
   <main>
     <section>
     <div class="history">
+      
       <p>Contact email : baeksamsibo@hotmail.com</p>
       <a href="https://www.microsoft.com/ko-kr/microsoft-365/outlook/email-and-calendar-software-microsoft-outlook">
       <img src="hotmail.gif" width="70"></a>
@@ -43,18 +44,19 @@
     <form action="https://paypal.me/baeksamsibo?country.x=KR&locale.x=ko_KR" method="post" target="_top">
     <!-- Display the payment button. -->
     <input type="image" name="submit" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Donate">
-    <img alt="?" width="1" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif"></form><br><br>
+    <img alt="donation button" width="1" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif"></form><br><br>
+    <p>백삼십오 | 인천광역시 연수구 먼우금로 149 105-502 | 사업자등록번호 : 422-08-02581 | Tel: 010 9828 5330 | E-mail:baeksamsibo@hotmail.com</p>
   </div>
   </section>
 </main>
     <footer>
-        <p class="copyright">135 © 2024</p>
-        <img src="paypal.gif" width="70">
-        <img src="msie.gif" width="70">
-        <div class="tos">
-          <a href="https://baeksamsibo.myshopify.com/policies/terms-of-service" >Terms of service</a>
-          <a href="https://baeksamsibo.myshopify.com/policies/refund-policy" >Refund policy</a>
-        </div>
-      </footer>
-    </body>
+      <p class="copyright">135 © 2024</p>
+      <img src="paypal.gif" width="70">
+      <img src="msie.gif" width="70">
+      <div class="tos">
+        <a href="TermsofService.html" >Terms of service</a>
+        <a href="tandc.html">Delivery&Refund policy</a>
+      </div>
+    </footer>
+  </body>
 </html>
