--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
     <p>Payment : To buy a product, You should have your own Paypal account! and there can be additional tax if concerned.<br> Shippping : Products will be sent from Korea using the ePOST (k-packet) service. <br>To get the package safely and promptly, please write your whole shippng address in english!<br>
     If you have any questions, contact us via email or instagram.<br>
     </p>
-    <p class="korean">한국 거주 중인 경우 계좌이체 방식을 통한 구매가 가능합니다. 계좌이체 구매를 원하시는 경우 이메일이나 인스타그램 계정을 통해 연락 주시기 바랍니다.</p>
   </main>
 
-  <footer style="text-align: center;">
+  <footer>
     <p class="copyright">135 © 2024</p>
     <img src="paypal.gif" width="70">
     <img src="msie.gif" width="70"><br>
   <div class="tos">
-    <a href="https://baeksamsibo.myshopify.com/policies/terms-of-service" >Terms of service</a>
-    <a href="https://baeksamsibo.myshopify.com/policies/refund-policy" >Refund policy</a>
+    <a href="TermsofService.html" >Terms of service</a>
+    <a href="tandc.html">Delivery&Refund policy</a>
   </div>
+  <p class="info">백삼십오 | 인천광역시 연수구 먼우금로 149 105-502 |<br> 사업자등록번호 : 422-08-02581 | Tel: 010 9828 5330 | E-mail:baeksamsibo@hotmail.com</p>
   </footer>
     <a href="DISCOVERY.html" class="mission">?</a>
   </body>
