--- a/products.html
+++ b/products.html
@@ -110,9 +110,10 @@
       <img src="paypal.gif" width="70">
       <img src="msie.gif" width="70"><br>
       <div class="tos">
-        <a href="https://baeksamsibo.myshopify.com/policies/terms-of-service" >Terms of service</a>
-        <a href="https://baeksamsibo.myshopify.com/policies/refund-policy" >Refund policy</a>
+        <a href="TermsofService.html" >Terms of service</a>
+        <a href="tandc.html">Delivery&Refund policy</a>
       </div>
+      <p class="info">백삼십오 | 인천광역시 연수구 먼우금로 149 105-502 |<br> 사업자등록번호 : 422-08-02581 | Tel: 010 9828 5330 | E-mail:baeksamsibo@hotmail.com</p>
       </footer>
 
     </body>
