--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,6 @@
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <link href="https://fonts.cdnfonts.com/css/jomolhari-3" rel="stylesheet">
   </head>
-
   <body> 
 
   <header>
@@ -21,7 +20,6 @@
 
 
   <section>
-
       <!-- 전체 카트 미리보기 창 -->
       <div style="display: flex; justify-content: center;">
         <div id="info" style="cursor: pointer; display: inline-flex; z-index: 5;">
@@ -121,6 +119,13 @@
       </script>
     <footer>
       <p class="copyright">135 © 2024</p>
+      <img src="paypal.gif" width="70">
+      <img src="msie.gif" width="70">
+      <div class="tos">
+        <a href="TermsofService.html" >Terms of service</a>
+        <a href="tandc.html">Delivery&Refund policy</a>
+      </div>
+      <p class="info">백삼십오 | 인천광역시 연수구 먼우금로 149 105-502 |<br> 사업자등록번호 : 422-08-02581 | Tel: 010 9828 5330 | E-mail:baeksamsibo@hotmail.com</p>
     </footer>
   </body>
 </html>
