--- a/handc.html
+++ b/handc.html
@@ -13,9 +13,9 @@
 
   <body>
     <!-- 카트 -->
-    <div class="cart">
+    <!-- <div class="cart">
       <button onclick="location.href='cart.html'" >CART</button>
-      </div>
+      </div> -->
 
       <header>
       <div class="logo">
@@ -45,18 +45,18 @@
     <!-- Display the payment button. -->
     <input type="image" name="submit" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Donate">
     <img alt="donation button" width="1" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif"></form><br><br>
-    <p>백삼십오 | 인천광역시 연수구 먼우금로 149 105-502 | 사업자등록번호 : 422-08-02581 | Tel: 010 9828 5330 | E-mail:baeksamsibo@hotmail.com</p>
   </div>
   </section>
 </main>
-    <footer>
-      <p class="copyright">135 © 2024</p>
-      <img src="paypal.gif" width="70">
-      <img src="msie.gif" width="70">
-      <div class="tos">
-        <a href="TermsofService.html" >Terms of service</a>
-        <a href="tandc.html">Delivery&Refund policy</a>
-      </div>
-    </footer>
+<footer>
+  <img src="paypal.gif" width="70">
+  <img src="msie.gif" width="70"><br>
+  <div class="tos">
+    <br>
+    <a href="TermsofService.html" >Terms of service</a>
+    <a href="tandc.html">Delivery & Refund policy</a>
+    <p class="copyright">135 © 2024 </p>
+  </div>
+</footer>
   </body>
 </html>
