--- a/index.html
+++ b/index.html
@@ -42,22 +42,22 @@
     <h4>Welcome to baeksamsibo(135) homepage!</h4>
     <p>Baeksamsibo, which means one hundred thirty five in korean is the brand that showcases playing card artworks, clothes,and accesaries.<br>
     You can check our products(also buy them if you're interested), reference video and more in this web site.<br>
-    Follow 135 instagram account(<b>@baeksamsibo</b>) for more info
-    <h4>About payment & shipping...</h4>
-    <p>To buy a product, You should have your own Paypal account! and there can be additional tax if concerned.<br>Credit card payment will be added later...<br> Products will be sent from Korea using the ePOST (k-packet) service. <br>To get the package safely and promptly, please write your whole shippng address in english!<br>
+    Follow 135 instagram account(<b>@baeksamsibo</b>) for more info...
+    <h4>About payment & shipping</h4>
+    <p>This web site uses Paypal payment. You can buy our products through your Paypal account and also your credit cards(Visa,Mastercard,AMEX etc). <br>there can be additional tax if concerned.<br> Products will be sent from Korea using the ePOST (k-packet) service. <br>To get the package safely and promptly, please write your whole shippng address in english.<br>
     If you have any questions, contact us via <b>email</b> or <b>instagram</b>.<br>
     </p>
   </main>
 
   <footer>
-    <p class="copyright">135 © 2024</p>
     <img src="paypal.gif" width="70">
     <img src="msie.gif" width="70"><br>
-  <div class="tos">
-    <a href="TermsofService.html" >Terms of service</a>
-    <a href="tandc.html">Delivery&Refund policy</a>
-  </div>
-  <p class="info">백삼십오 | 인천광역시 연수구 먼우금로 149 105-502 |<br> 사업자등록번호 : 422-08-02581 | Tel: 010 9828 5330 | E-mail:baeksamsibo@hotmail.com</p>
+    <div class="tos">
+      <br>
+      <a href="TermsofService.html" >Terms of service</a>
+      <a href="tandc.html">Delivery & Refund policy</a>
+      <p class="copyright">135 © 2024 </p>
+    </div>
   </footer>
     <a href="DISCOVERY.html" class="mission">?</a>
   </body>
