--- a/reference.html
+++ b/reference.html
@@ -5,9 +5,6 @@
     <title>135</title>
     <link href="design.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://unpkg.com/98.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
   <link rel="icon" href="135.ico">
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
@@ -44,16 +41,16 @@
         <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7Z_46F0utXg?si=G2UIuQ_CFM8VhgNP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </section>
-      <footer>
-        <p class="copyright">135 © 2024</p>
-        <img src="paypal.gif" width="70">
-        <img src="msie.gif" width="70">
-        <div class="tos">
-          <a href="TermsofService.html" >Terms of service</a>
-          <a href="tandc.html">Delivery&Refund policy</a>
-        </div>
-        <p class="info">백삼십오 | 인천광역시 연수구 먼우금로 149 105-502 |<br> 사업자등록번호 : 422-08-02581 | Tel: 010 9828 5330 | E-mail:baeksamsibo@hotmail.com</p>
-      </footer>
+    <footer>
+      <img src="paypal.gif" width="70">
+      <img src="msie.gif" width="70"><br>
+      <div class="tos">
+        <br>
+        <a href="TermsofService.html" >Terms of service</a>
+        <a href="tandc.html">Delivery & Refund policy</a>
+        <p class="copyright">135 © 2024 </p>
+      </div>
+    </footer>
 
   </body>
 
