--- a/cart.html
+++ b/cart.html
@@ -117,15 +117,15 @@
         window.location.reload()
       });
       </script>
-    <footer>
-      <p class="copyright">135 © 2024</p>
-      <img src="paypal.gif" width="70">
-      <img src="msie.gif" width="70">
-      <div class="tos">
-        <a href="TermsofService.html" >Terms of service</a>
-        <a href="tandc.html">Delivery&Refund policy</a>
-      </div>
-      <p class="info">백삼십오 | 인천광역시 연수구 먼우금로 149 105-502 |<br> 사업자등록번호 : 422-08-02581 | Tel: 010 9828 5330 | E-mail:baeksamsibo@hotmail.com</p>
-    </footer>
+        <footer>
+          <img src="paypal.gif" width="70">
+          <img src="msie.gif" width="70"><br>
+          <div class="tos">
+            <br>
+            <a href="TermsofService.html" >Terms of service</a>
+            <a href="tandc.html">Delivery & Refund policy</a>
+            <p class="copyright">135 © 2024 </p>
+          </div>
+        </footer>
   </body>
 </html>
