--- a/tandc.html
+++ b/tandc.html
@@ -7,17 +7,14 @@
     <link rel="stylesheet" href="https://unpkg.com/98.css">
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
     <link rel="icon" href="135.ico">
   </head>
 
   <body> 
     <!-- 카트 -->
-    <div class="cart">
+    <!-- <div class="cart">
       <button onclick="location.href='cart.html'">CART</button>
-    </div>
+    </div> -->
 
   <header>
     <div class="logo">
@@ -62,14 +59,14 @@
   </main>
 
   <footer>
-    <p class="copyright">135 © 2024</p>
     <img src="paypal.gif" width="70">
     <img src="msie.gif" width="70"><br>
-  <div class="tos">
-    <a href="TermsofService.html" >Terms of service</a>
-    <a href="tandc.html">Delivery&Refund policy</a>
-  </div>
-  <p class="info">백삼십오 | 인천광역시 연수구 먼우금로 149 105-502 |<br> 사업자등록번호 : 422-08-02581 | Tel: 010 9828 5330 | E-mail:baeksamsibo@hotmail.com</p>
+    <div class="tos">
+      <br>
+      <a href="TermsofService.html" >Terms of service</a>
+      <a href="tandc.html">Delivery & Refund policy</a>
+      <p class="copyright">135 © 2024 </p>
+    </div>
   </footer>
   </body>
 </html>
