--- a/handc.html
+++ b/handc.html
@@ -48,7 +48,7 @@
   </div>
   </section>
 </main>
-<footer>
+<footer><br>
   <img src="paypal.gif" width="70">
   <img src="msie.gif" width="70"><br>
   <div class="tos">
